<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TripControlFragment">

    <LinearLayout
        android:id="@+id/layout_control_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_destination_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_destination" />

        <TextView
            android:id="@+id/text_destination_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="32sp"
            tools:text="@string/tools_address" />

        <TextView
            android:id="@+id/text_messaged_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_will_be_messaged" />

        <TextView
            android:id="@+id/text_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:singleLine="true"
            tools:text="@string/tools_contacts_string" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:layout_marginTop="8dp" >

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/button_pause_resume_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                tools:text="@string/msg_pause_trip" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/button_stop_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/msg_stop_trip"
                android:drawableLeft="@drawable/ic_stop" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>