<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LocationUpdateIntervalFragment" >

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_battery_explanation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_location_interval"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" >

            <TextView
                android:id="@+id/slider_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_1_minute"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/slider_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_5_minute"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/slider_1"
                app:layout_constraintEnd_toStartOf="@id/slider_10" />

            <TextView
                android:id="@+id/slider_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_10_minute"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/slider_5"
                app:layout_constraintEnd_toStartOf="@id/slider_30" />

            <TextView
                android:id="@+id/slider_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_30_minute"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/slider_10"
                app:layout_constraintEnd_toStartOf="@id/slider_60"/>

            <TextView
                android:id="@+id/slider_60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_60_minute"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <SeekBar
            android:id="@+id/seekbar_location_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_highest_battery_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_highest_battery_usage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_lowest_battery_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_lowest_battery_usage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>