<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <TextView
        android:id="@+id/text_contact_handle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="20sp"
        tools:text="@string/hint_phone_number"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/msg_dots"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/text_contact_handle"
        app:layout_constraintRight_toLeftOf="@id/text_result"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="20sp"
        tools:text="@string/msg_message_sent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>