<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".PickContactFragment">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_pick_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="16dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="4dp" >

        <LinearLayout
            android:id="@+id/layout_pick_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp" >

            <LinearLayout
                android:id="@+id/layout_number_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edit_number"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:gravity="center"
                    android:maxLength="14"
                    android:textSize="24sp"
                    android:hint="@string/hint_phone_number"/>

                <Button
                    android:id="@+id/button_add_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_add"/>
            </LinearLayout>

            <TextView
                android:id="@+id/text_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/msg_or" />

            <Button
                android:id="@+id/button_pick_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_pick_from_contacts" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>